--- a/01_파이썬데이터분석/01_numpy_basic.ipynb
+++ b/01_파이썬데이터분석/01_numpy_basic.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +350,145 @@
     "print(m4)\n",
     "print(m4.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11] (12,)\n",
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]] (2, 6)\n",
+      "[[ 0  1  2]\n",
+      " [ 3  4  5]\n",
+      " [ 6  7  8]\n",
+      " [ 9 10 11]] (4, 3)\n",
+      "[[ 0]\n",
+      " [ 1]\n",
+      " [ 2]\n",
+      " [ 3]\n",
+      " [ 4]\n",
+      " [ 5]\n",
+      " [ 6]\n",
+      " [ 7]\n",
+      " [ 8]\n",
+      " [ 9]\n",
+      " [10]\n",
+      " [11]] (12, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -1 을 사용한 reshape : 요소수를 자동으로 계산\n",
+    "m1 = np.arange(12)\n",
+    "print(m1,m1.shape)\n",
+    "\n",
+    "m2 = m1.reshape(-1,6)  # 행의 요소수를 자동으로 계산, 2\n",
+    "print(m2,m2.shape)     # (2,6)\n",
+    "\n",
+    "m2 = m1.reshape(4,-1)  # 열의 요소수를 자동으로 계산, 3\n",
+    "print(m2,m2.shape)     # (4,3)\n",
+    "\n",
+    "m2 = m1.reshape(-1,1)  # 행의 요소수를 자동으로 계산, 12\n",
+    "print(m2,m2.shape)     # (12,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 배열의 인덱싱과 슬라이싱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11] (12,)\n",
+      "0 1 2 3 11 11\n",
+      "[2 3 4 5 6 7] [ 0  1  2  3  4  5  6  7  8  9 10 11] [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 0  2  4  6  8 10] [11 10  9  8  7  6  5  4  3  2  1  0]\n",
+      "[10  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 배열의 인덱싱과 슬라이싱 : list 와 동일한 방법\n",
+    "d = np.arange(12)\n",
+    "print(d,d.shape)\n",
+    "print(d[0],d[1],d[2],d[3],d[11],d[-1])\n",
+    "print(d[2:8],d[:],d[:-1])\n",
+    "print(d[::2],d[::-1])\n",
+    "\n",
+    "d[0] = 10  # list 처럼 요소 변경이 가능\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]] (3, 4)\n",
+      "0\n",
+      "0\n",
+      "9\n",
+      "[0 1 2 3]\n",
+      "[0 1 2 3]\n",
+      "[[ 0  1  2]\n",
+      " [ 4  5  6]\n",
+      " [ 8  9 10]]\n",
+      "[[ 0  2]\n",
+      " [ 8 10]]\n",
+      "[[20 20 20 20]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열의 인덱싱과 슬라이싱\n",
+    "# data[행,열]\n",
+    "d = np.arange(12).reshape(3,4)\n",
+    "print(d,d.shape)\n",
+    "\n",
+    "# 인덱싱\n",
+    "print(d[0][0])  # 0\n",
+    "print(d[0,0])   # 0\n",
+    "print(d[2,1])   # 9\n",
+    "\n",
+    "# 슬라이싱\n",
+    "print(d[0])     # [0 1 2 3]\n",
+    "print(d[0,:])   # [0 1 2 3]\n",
+    "\n",
+    "print(d[:,:-1])   # (3,3), 마지막 열을 제외\n",
+    "print(d[::2,::2]) # (2,2)\n",
+    "\n",
+    "d[0] = 20        # 0번 행의 모든 요소를 20으로 변경\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
