--- a/01_파이썬데이터분석/01_numpy_basic.ipynb
+++ b/01_파이썬데이터분석/01_numpy_basic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "dict_keys(['?', 0, 'byte', 'b', 1, 'ubyte', 'B', 2, 'short', 'h', 3, 'ushort', 'H', 4, 'i', 5, 'uint', 'I', 6, 'intp', 'p', 9, 'uintp', 'P', 10, 'long', 'l', 7, 'L', 8, 'longlong', 'q', 'ulonglong', 'Q', 'half', 'e', 23, 'f', 11, 'double', 'd', 12, 'longdouble', 'g', 13, 'cfloat', 'F', 14, 'cdouble', 'D', 15, 'clongdouble', 'G', 16, 'O', 17, 'S', 18, 'unicode', 'U', 19, 'void', 'V', 20, 'M', 21, 'm', 22, 'bool8', 'Bool', 'b1', 'int64', 'Int64', 'i8', 'uint64', 'Uint64', 'u8', 'float16', 'Float16', 'f2', 'float32', 'Float32', 'f4', 'float64', 'Float64', 'f8', 'complex64', 'Complex32', 'c8', 'complex128', 'Complex64', 'c16', 'object0', 'Object0', 'bytes0', 'Bytes0', 'str0', 'Str0', 'void0', 'Void0', 'datetime64', 'Datetime64', 'M8', 'timedelta64', 'Timedelta64', 'm8', 'int32', 'Int32', 'i4', 'uint32', 'UInt32', 'u4', 'UInt64', 'int16', 'Int16', 'i2', 'uint16', 'UInt16', 'u2', 'int8', 'Int8', 'i1', 'uint8', 'UInt8', 'u1', 'complex_', 'int0', 'uint0', 'single', 'csingle', 'singlecomplex', 'float_', 'intc', 'uintc', 'int_', 'longfloat', 'clongfloat', 'longcomplex', 'bool_', 'bytes_', 'string_', 'unicode_', 'object_', 'str_', 'int', 'float', 'complex', 'bool', 'object', 'str', 'bytes', 'a'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,15 @@
       " [ 8 10]]\n",
       "[[20 20 20 20]\n",
       " [ 4  5  6  7]\n",
-      " [ 8  9 10 11]]\n"
+      " [ 8  9 10 11]]\n",
+      "[[30 30]\n",
+      " [30 30]]\n",
+      "[[30 20 30 20]\n",
+      " [ 4  5  6  7]\n",
+      " [30  9 30 11]]\n",
+      "[[-1 -1 -1 -1]\n",
+      " [-1 -1 -1 -1]\n",
+      " [-1 -1 -1 -1]]\n"
      ]
     }
    ],
@@ -479,16 +487,200 @@
     "print(d[:,:-1])   # (3,3), 마지막 열을 제외\n",
     "print(d[::2,::2]) # (2,2)\n",
     "\n",
-    "d[0] = 20        # 0번 행의 모든 요소를 20으로 변경\n",
-    "print(d)"
+    "d[0] = 20        # 0번 행의 모든 요소를 20으로 변경 ,d[0,0] = 20, d[0,1] = 20, d[0,2] = 20, d[0,2] = 20\n",
+    "print(d)\n",
+    "\n",
+    "d[::2,::2] = 30  # 슬라이싱 된 요소 전체를 한번에 변경할 수 있다\n",
+    "print(d[::2,::2] )\n",
+    "print(d)\n",
+    "\n",
+    "d[:,:] = -1      # 전체 요소를 한번에 변경할 수 있다\n",
+    "print(d)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]]\n",
+      "\n",
+      " [[ 6  7  8]\n",
+      "  [ 9 10 11]]] (2, 2, 3)\n",
+      "0\n",
+      "0\n",
+      "5\n",
+      "[[[0 1]]\n",
+      "\n",
+      " [[6 7]]]\n",
+      "[[[ 4  5]]\n",
+      "\n",
+      " [[10 11]]]\n",
+      "[[0 3]\n",
+      " [6 9]]\n",
+      "[ 5 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3차원 배열의 인덱싱과 슬라이싱\n",
+    "# data[면,행,열]\n",
+    "d = np.arange(12).reshape(2,2,3)\n",
+    "print(d,d.shape)\n",
+    "\n",
+    "# 인덱싱\n",
+    "print(d[0][0][0])  # old style\n",
+    "print(d[0,0,0])    # 0\n",
+    "print(d[0,1,2])    # 5\n",
+    "\n",
+    "# 슬라이싱\n",
+    "print(d[:,:-1,:-1]) # (2,1,2)\n",
+    "print(d[:,1:,1:])   # (2,1,2)\n",
+    "print(d[:,:,-1])    # (2,2)\n",
+    "print(d[:,-1,-1])   # (2,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 불린 인덱싱: 조건식을 사용한 인덱싱, 조건 검색 필터를 사용한 추출(매우 중요)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[False False  True  True  True  True]\n",
+      "[3 4 5 6]\n",
+      "[3 4 5 6]\n",
+      "[ True False  True False  True False]\n",
+      "[1 3 5]\n",
+      "[1 2 4 5 6]\n",
+      "[3 4 5]\n",
+      "[2 4 6]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5,6])\n",
+    "print(a)\n",
+    "\n",
+    "print(a > 2)\n",
+    "print(a[a > 2])   # 배열 a에서 2보다 큰 요소들을 추출\n",
+    "print(a[[False, False,  True,  True,  True, True]])\n",
+    "\n",
+    "boolean_index = np.array([True,False,True,False,True,False])\n",
+    "print(boolean_index)\n",
+    "print(a[boolean_index])\n",
+    "\n",
+    "print(a[a != 3])\n",
+    "print(a[(a > 2) & (a < 6)])\n",
+    "print(a[(a % 2) == 0])\n",
+    "print(a[ a < a.mean()])  # 배열 a에서 평균보다 작은 값만 추출"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### fancy 인덱싱 : 리스트나 배열로 임의의 집합을 지정하여 인덱싱,(멋대로 내키는 대로 인덱싱)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6] (6,)\n",
+      "[2 4 6 3 4 2]\n",
+      "[1 6 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 차원 배열의 fancy 인덱싱\n",
+    "a = np.arange(1,7)\n",
+    "print(a,a.shape)\n",
+    "\n",
+    "print(a[[1,3,5,2,3,1]])\n",
+    "print(a[[0,-1,-3,-2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20 30]\n",
+      " [40 50 60]\n",
+      " [70 80 90]] (3, 3)\n",
+      "[10 80]\n",
+      "[[10 20]\n",
+      " [70 80]]\n",
+      "10 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열의 fancy 인덱싱\n",
+    "a = np.arange(10,100,10).reshape(3,3)\n",
+    "print(a,a.shape)\n",
+    "\n",
+    "print(a[[0,2],[0,1]])  # 행과 열이 서로 match :  [a[0,0],a[2,1]] --> [10,80]\n",
+    "print(a[[0,2],:2])\n",
+    "\n",
+    "print(a[0,0],a[2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열의 형상 다루기 : reshape(), 편평화(flatten()), 전치(transpose())\n",
+    "# flatten() : 다차원 배열을 1 차원으로 만든다\n",
+    "d = np.arange(12).reshape(3,4)\n",
+    "print(d)\n",
+    "\n",
+    "f = d.flatten()   # (3,4) --> (12,)   , d.reshape(12,)\n",
+    "print(f)\n",
+    "\n",
+    "\n",
+    "# transpose() : 전치 행렬, 행과 열을 서로 맞바꾸는 함수"
+   ]
   },
   {
    "cell_type": "code",
