--- a/01_파이썬데이터분석/01_numpy_basic.ipynb
+++ b/01_파이썬데이터분석/01_numpy_basic.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -521,8 +521,8 @@
       "[[[ 4  5]]\n",
       "\n",
       " [[10 11]]]\n",
-      "[[0 3]\n",
-      " [6 9]]\n",
+      "[[ 2  5]\n",
+      " [ 8 11]]\n",
       "[ 5 11]\n"
      ]
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
       "[1 2 4 5 6]\n",
       "[3 4 5]\n",
       "[2 4 6]\n",
-      "[4 5 6]\n"
+      "[1 2 3]\n"
      ]
     }
    ],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,18 @@
       "[[ 0  1  2  3]\n",
       " [ 4  5  6  7]\n",
       " [ 8  9 10 11]]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "[[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]] (4, 3)\n",
+      "[[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]] (3, 4)\n"
      ]
     }
    ],
@@ -679,7 +690,114 @@
     "print(f)\n",
     "\n",
     "\n",
-    "# transpose() : 전치 행렬, 행과 열을 서로 맞바꾸는 함수"
+    "# transpose() : 전치 행렬, 행과 열을 서로 맞바꾸는 함수\n",
+    "t = d.transpose()\n",
+    "print(t,t.shape)    # (3,4) --> (4,3)\n",
+    "\n",
+    "print(d.T)    # transpose()와 동일한 결과\n",
+    "\n",
+    "# flat  : 요소전체를 변경할 때 사용\n",
+    "d.flat = 0\n",
+    "print(d,d.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]] (3, 4)\n",
+      "66\n",
+      "66\n",
+      "[12 15 18 21]\n",
+      "[ 6 22 38]\n",
+      "[ 6 22 38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# axis 사용법\n",
+    "a = np.arange(12).reshape(3,4)\n",
+    "print(a,a.shape)\n",
+    "\n",
+    "print(a.sum())   # 배열 전체의 합\n",
+    "print(a.sum(axis=None))   # 배열 전체의 합\n",
+    "\n",
+    "print(a.sum(axis=0))  # 수직 방향의 합\n",
+    "print(a.sum(axis=1))  # 수평 방향의 합\n",
+    "print(a.sum(axis=-1))  # 마지막 축 방향의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 2 8 3 1 4 5 6] (8,)\n",
+      "[1 2 3 4 5 6 8 9]\n",
+      "[1 2 3 4 5 6 8 9]\n",
+      "[9 8 6 5 4 3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort() 함수\n",
+    "a = np.array([9,2,8,3,1,4,5,6])\n",
+    "print(a,a.shape)\n",
+    "\n",
+    "r = np.sort(a)  # 오름차순, 원본 변경 없음, sort된 결과를 반환\n",
+    "print(r)\n",
+    "\n",
+    "a.sort()       # 오름차순, 원본 변경\n",
+    "print(a)\n",
+    "\n",
+    "r = np.sort(a)[::-1] # 내림 차순: 오름 차순 정렬후 순서를 거꾸로 변경 \n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 2 8 3 1 4 5 6] (8,)\n",
+      "<class 'numpy.ndarray'>\n",
+      "[4 1 3 5 6 7 2 0]\n",
+      "[1 2 3 4 5 6 8 9]\n",
+      "<class 'numpy.ndarray'>\n",
+      "[0 2 7 6 5 3 1 4]\n",
+      "[9 8 6 5 4 3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# argsort() 함수 : sort된 후 해당 값의 인덱스(원본기준)를 반환\n",
+    "a = np.array([9,2,8,3,1,4,5,6])\n",
+    "print(a,a.shape)\n",
+    "\n",
+    "sort_index = np.argsort(a)  # 오름차순\n",
+    "print(type(sort_index))\n",
+    "print(sort_index)   \n",
+    "print(a[sort_index])\n",
+    "\n",
+    "sort_index = np.argsort(-1*a) # 내림차순\n",
+    "print(type(sort_index))\n",
+    "print(sort_index)   \n",
+    "print(a[sort_index])"
    ]
   },
   {
