--- a/01_파이썬데이터분석/02_numpy_활용.ipynb
+++ b/01_파이썬데이터분석/02_numpy_활용.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,7 @@
     }
    ],
    "source": [
+    "# shape 이 같은 경우\n",
     "A = np.arange(9).reshape(3,3)\n",
     "B = np.arange(9).reshape(3,3) - 1\n",
     "print(A)\n",
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,43 +282,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 끝쪽 차원부터 비교하면서 앞쪽으로 진행한다\n",
     "# 두 배열의 각 차원에서 shape 이 같거나 shape이 1인경우 브로드캐스팅 가능\n",
-    "A  =  (2, 3)\n",
-    "B  =     (3,)\n",
-    "----------------\n",
-    "결과: (2, 3)\n",
+    "# A  =  (2, 3)\n",
+    "# B  =     (3,)\n",
+    "# ----------------\n",
+    "# 결과: (2, 3)\n",
     "\n",
-    "A  =  (3, 1)\n",
-    "B  =     (3,)\n",
-    "----------------\n",
-    "결과: (3, 3)\n",
+    "# A  =  (3, 1)\n",
+    "# B  =     (3,)\n",
+    "# ----------------\n",
+    "# 결과: (3, 3)\n",
     "\n",
-    "A  =  (3, 2)\n",
-    "B  =     (3,)\n",
-    "----------------\n",
-    "결과: (3, x)  ==> 오류\n",
+    "# A  =  (3, 2)\n",
+    "# B  =     (3,)\n",
+    "# ----------------\n",
+    "# 결과: (3, x)  ==> 오류\n",
     "    \n",
-    "A  =  (15, 3, 5)\n",
-    "B  =      (3, 1)\n",
-    "----------------\n",
-    "결과: (15, 3, 5)\n",
+    "# A  =  (15, 3, 5)\n",
+    "# B  =      (3, 1)\n",
+    "# ----------------\n",
+    "# 결과: (15, 3, 5)\n",
     "\n",
-    "A  =  (8, 1, 6, 1)\n",
-    "B  =     (7, 1, 5)\n",
-    "--------------------\n",
-    "결과: (8 ,7, 6 ,5)\n",
+    "# A  =  (8, 1, 6, 1)\n",
+    "# B  =     (7, 1, 5)\n",
+    "# --------------------\n",
+    "# 결과: (8 ,7, 6 ,5)\n",
     "    \n",
-    "A  =  (8, 4, 3)\n",
-    "B  =     (2, 1)\n",
-    "----------------\n",
-    "결과: (8, x, 3) ==> 오류   \n",
+    "# A  =  (8, 4, 3)\n",
+    "# B  =     (2, 1)\n",
+    "# ----------------\n",
+    "# 결과: (8, x, 3) ==> 오류   \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [4] dot product: 내적 곱셈 ,행렬(matrix) 곱셈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3] (3,)\n",
+      "[4 5 6] (3,)\n",
+      "[ 4 10 18]\n",
+      "32\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 배열(벡터)의 내적\n",
+    "A = np.array([1,2,3])\n",
+    "B = np.array([4,5,6])\n",
+    "print(A,A.shape)\n",
+    "print(B,B.shape)\n",
+    "\n",
+    "print(A*B)   # element-wise 곱셈\n",
+    "\n",
+    "dot_product = np.dot(A,B)  # 내적 곱셈\n",
+    "print(dot_product)\n",
+    "print(A[0]*B[0] + A[1]*B[1] + A[2]*B[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[ 7  8]\n",
+      " [ 9 10]\n",
+      " [11 12]]\n",
+      "[[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열(행렬,matrix)의 곱셈\n",
+    "A = np.arange(1,7).reshape(2,3)\n",
+    "B = np.arange(7,13).reshape(3,2)\n",
+    "print(A)    # (2,3)\n",
+    "print(B)    # (3,2)\n",
+    "\n",
+    "# print(A*B)  # ValueError\n",
+    "\n",
+    "dot_product = np.dot(A,B)  # 내적 곱셈\n",
+    "print(dot_product)\n",
+    "\n",
+    "# (2,3) * (3,2) = (2,2)\n",
+    "# (m,n) * (n,l) = (m,l) # 행렬의 내적 곱셈시 shape 공식, 필수 암기 요망!!\n",
+    "\n",
+    "# (10,4) * (x,y) = (10,2) #  x = 4, y = 2를 구할 수 있어야한다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[ 7  8]\n",
+      " [ 9 10]\n",
+      " [11 12]]\n",
+      "<class 'numpy.matrix'>\n",
+      "[[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.mat(\"1 2 3;4 5 6\")\n",
+    "B = np.mat(\"7 8;9 10;11 12\")\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(type(A))\n",
+    "print(A*B)  # 내적 곱셈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A: [[ 1 -2  1]\n",
+      " [ 0  2 -8]\n",
+      " [-4  5  9]]\n",
+      "[ 0  8 -9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 선형 방정식 풀이 : 선형시스템을 해석\n",
+    "A = np.mat(\"1 -2 1;0 2 -8;-4 5 9\")\n",
+    "print(\"A:\",A)\n",
+    "b = np.array([0,8,-9])\n",
+    "print(b)\n",
+    "\n",
+    "# 연립방정식\n",
+    "# 1*x0 - 2*x1 + 1*x2 = 0    # 29 - 32 + 3 = 0\n",
+    "# 0*x0 + 2*x1 - 8*x2 = 8\n",
+    "# -4*x0 + 5*x1 + 9*x2 = -9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: [29. 16.  3.]\n",
+      "Check\n",
+      " [[ 0.  8. -9.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.linalg.solve(A,b)\n",
+    "print('Solution:',x)\n",
+    "print('Check\\n',np.dot(A,x))\n",
+    "\n",
+    "# A dot x ==> b\n",
+    "# [[ 1 -2  1]         [[29          [[0\n",
+    "#  [ 0  2 -8]     dot   16      ==>   8\n",
+    "#  [-4  5  9]]          3]]           9]]\n",
+    "#  (3,3) * (3,1) ==> (3,1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
