--- a/01_파이썬데이터분석/02_numpy_활용.ipynb
+++ b/01_파이썬데이터분석/02_numpy_활용.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +372,8 @@
       "[[ 7  8]\n",
       " [ 9 10]\n",
       " [11 12]]\n",
+      "[[ 58  64]\n",
+      " [139 154]]\n",
       "[[ 58  64]\n",
       " [139 154]]\n"
      ]
@@ -389,6 +391,7 @@
     "dot_product = np.dot(A,B)  # 내적 곱셈\n",
     "print(dot_product)\n",
     "\n",
+    "print(np.matmul(A,B))  # 동일한 결과\n",
     "# (2,3) * (3,2) = (2,2)\n",
     "# (m,n) * (n,l) = (m,l) # 행렬의 내적 곱셈시 shape 공식, 필수 암기 요망!!\n",
     "\n",
@@ -478,6 +481,87 @@
     "#  [ 0  2 -8]     dot   16      ==>   8\n",
     "#  [-4  5  9]]          3]]           9]]\n",
     "#  (3,3) * (3,1) ==> (3,1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
+      "[[ 1.42200269e-311  9.58487353e-322  0.00000000e+000]\n",
+      " [ 0.00000000e+000  1.42173718e-311  5.02034658e+175]\n",
+      " [ 1.27092332e-075  3.06059609e-057  2.94879478e+179]\n",
+      " [ 7.31556606e+169  1.47763641e+248  1.16096346e-028]\n",
+      " [ 7.69165785e+218  1.35617292e+248  3.10139001e+179]\n",
+      " [ 1.17687803e-047  2.08934532e-076  6.12674575e-062]\n",
+      " [ 4.30348039e-096  6.32299154e+233  6.48224638e+170]\n",
+      " [ 5.22411352e+257  5.74020278e+180  8.37174974e-144]\n",
+      " [ 1.41529402e+161  6.00736899e-067  4.52576983e+097]\n",
+      " [ 5.06266576e-038  3.92417332e+126 -2.40197436e+173]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기타 연산자 : zeros(), ones()\n",
+    "a = np.zeros(10)   # 초기 값을 0으로 채워서 배열을 생성\n",
+    "print(a)\n",
+    "\n",
+    "a = np.zeros((3,4))\n",
+    "print(a)\n",
+    "\n",
+    "a = np.ones(10)\n",
+    "print(a)\n",
+    "\n",
+    "a = np.ones((3,4))  # 초기 값을 1으로 채워서 배열을 생성\n",
+    "print(a)\n",
+    "\n",
+    "e = np.empty((10,3)) # 초기 값을 설정하지 않고 배열을 생성, 빠르게 생성\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.22199317 0.87073231 0.20671916 0.91861091]\n",
+      " [0.48841119 0.61174386 0.76590786 0.51841799]\n",
+      " [0.2968005  0.18772123 0.08074127 0.7384403 ]]\n",
+      "[[1 4 6 2]\n",
+      " [9 9 9 9]\n",
+      " [1 2 7 0]]\n",
+      "[[ 0.07453116  0.55653535  1.97258009 -0.24106628]\n",
+      " [ 0.36337589  1.07448417 -1.99994678  0.95853877]\n",
+      " [ 0.94220227  0.5689886   0.92890695  1.22638799]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy 난수 발생\n",
+    "# rand() : 실수\n",
+    "# randint() : 정수\n",
+    "# randn() : 실수, 정규 분포(standard normal distribution)\n",
+    "\n",
+    "np.random.seed(5)  # 난수의 씨앗\n",
+    "print(np.random.rand(3,4)) # 값이 0 ~ 1 사이, shape (3,4)\n",
+    "print(np.random.randint(10,size=(3,4))) # 값이 0 ~ 10 사이, shape (3,4)\n",
+    "print(np.random.randn(3,4)) # 정규 분포, 값이 0 ~ 1 사이, shape (3,4)"
    ]
   },
   {
