--- a/01_파이썬데이터분석/03_pandas_basic.ipynb
+++ b/01_파이썬데이터분석/03_pandas_basic.ipynb
@@ -1370,10 +1370,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0      26088.0\n",
+       "1       3172.0\n",
+       "2      33351.0\n",
+       "3         74.0\n",
+       "4      16557.0\n",
+       "        ...   \n",
+       "197    86206.0\n",
+       "198        NaN\n",
+       "199    21732.0\n",
+       "200    11696.0\n",
+       "201    13228.0\n",
+       "Name: Population (in thousands) total, Length: 202, dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sr = df['Country']       # Series 객체 : 1차원 배열(ndarray)과 호환\n",
+    "print(type(sr))\n",
+    "\n",
+    "sr = df[df.columns[-1]]  # Series 객체 : 1차원 배열(ndarray)과 호환\n",
+    "print(type(sr))\n",
+    "sr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afghanistan\n",
+      "Afghanistan\n",
+      "Zimbabwe\n",
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "201              Zimbabwe\n",
+       "200                Zambia\n",
+       "199                 Yemen\n",
+       "198    West Bank and Gaza\n",
+       "197               Vietnam\n",
+       "              ...        \n",
+       "4                  Angola\n",
+       "3                 Andorra\n",
+       "2                 Algeria\n",
+       "1                 Albania\n",
+       "0             Afghanistan\n",
+       "Name: Country, Length: 202, dtype: object"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1개 컬럼의 요소 접근\n",
+    "\n",
+    "# 인덱싱\n",
+    "print(df[df.columns[0]][0])\n",
+    "print(df['Country'][0])\n",
+    "print(df[df.columns[0]][201])\n",
+    "\n",
+    "# print(df[df.columns[0]][-1])  # 주의 오류  , [-1] --> [-1:]\n",
+    "\n",
+    "print(type(df[df.columns[0]][0]))    # str\n",
+    "\n",
+    "# 슬라이싱\n",
+    "df[df.columns[0]][2:6]   # 2번 행부터 5번 행까지\n",
+    "df[df.columns[0]][:-1]   # 마지막 행은 제외\n",
+    "df[df.columns[0]][::3]   # 3개의 step으로 슬라이싱\n",
+    "df[df.columns[0]][-1:]   # 마지막 행만 추출\n",
+    "df[df.columns[0]][::-1]  # 행을 역순으로 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>CountryID</th>\n",
+       "      <th>Continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Antigua and Barbuda</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Bahamas</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Barbados</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Country  CountryID  Continent\n",
+       "2               Algeria          3          3\n",
+       "5   Antigua and Barbuda          6          4\n",
+       "8             Australia          9          6\n",
+       "11              Bahamas         12          4\n",
+       "14             Barbados         15          4"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 여러 개의 컬럼을 가져오기:여러개의 컬럼명을 리스트로 만들어서 인덱싱에 사용\n",
+    "df[['Country','CountryID','Continent']]            # DataFrame 추출\n",
+    "df[[df.columns[0],df.columns[1],df.columns[2]]]    # DataFrame 추출\n",
+    "\n",
+    "# df[[df.columns[0],df.columns[1],df.columns[2]]][0]     # DataFrame이므로 오류\n",
+    "df[[df.columns[0],df.columns[1],df.columns[2]]][2:15:3]  # 슬라이싱"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DataFrame의 요소 접근하기 : 읽기와 수정\n",
+    "* (1) df.loc[행번호,열]   :  명시적인 index\n",
+    "* (2) df.iloc[행번호,열]  :  함묵적인 index, 파이썬 스타일, int형 0부터 시작\n",
+    "* df.ix[ ] : 최신 버전에서 삭제됨"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.loc[] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.iloc[] "
+   ]
   }
  ],
  "metadata": {
