--- a/01_파이썬데이터분석/04_pandas_활용.ipynb
+++ b/01_파이썬데이터분석/04_pandas_활용.ipynb
@@ -872,6 +872,278 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Series 객체 : 1차원 배열, 1차원 ndarray와 호환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "0     kim\n",
+      "1    park\n",
+      "2     lee\n",
+      "3     min\n",
+      "4    song\n",
+      "Name: ename, dtype: object\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "0     True\n",
+      "1     True\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "Name: ename, dtype: bool\n",
+      "  ename deptname addr          phone\n",
+      "0   kim      관리직  서울시  010-1111-1111\n",
+      "1  park      관리직  부산시  010-2222-2222\n",
+      "  ename deptname addr          phone\n",
+      "2   lee      영업직  광주시  010-3333-3333\n",
+      "3   min      영업직  광주시  010-4444-4444\n",
+      "  ename deptname addr          phone\n",
+      "2   lee      영업직  광주시  010-3333-3333\n",
+      "3   min      영업직  광주시  010-4444-4444\n",
+      "4  song      개발직  광주시  010-5555-5555\n"
+     ]
+    }
+   ],
+   "source": [
+    "sr = m2['ename']\n",
+    "print(type(sr))\n",
+    "print(sr)\n",
+    "\n",
+    "# str.contains() 메서드를 사용하여 문자열의 조건 검색, 행을 추출\n",
+    "sr = m2['ename'].str.contains('k')\n",
+    "print(type(sr))\n",
+    "print(sr)\n",
+    "print(m2[sr])\n",
+    "\n",
+    "# 'deptname' 이 '영업직'인 행만 추출\n",
+    "print(m2[m2['deptname'].str.contains('영업직')])\n",
+    "\n",
+    "# 'addr' 가 '광주시'인 행만 추출\n",
+    "print(m2[m2['addr'].str.contains('광주시')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     5.000000\n",
+       "mean     30.000000\n",
+       "std      15.811388\n",
+       "min      10.000000\n",
+       "25%      20.000000\n",
+       "50%      30.000000\n",
+       "75%      40.000000\n",
+       "max      50.000000\n",
+       "Name: 영어, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Series 객체의 통계 메소드\n",
+    "score_table = { '영어': [10,20,30,40,50],\n",
+    "                '수학': [70,80,90,30,20]}\n",
+    "df1 = pd.DataFrame(score_table)\n",
+    "sr = df1['영어']\n",
+    "sr.sum()\n",
+    "sr.mean()\n",
+    "sr.median()\n",
+    "sr.max()\n",
+    "sr.min()\n",
+    "sr.std()\n",
+    "sr.var()\n",
+    "sr.count()\n",
+    "sr.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 누락된 데이터(결측치,NaN,NaT) 다루기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Country  Net primary school enrolment ratio male (%)\n",
+      "0      False                                         True\n",
+      "1      False                                        False\n",
+      "2      False                                        False\n",
+      "3      False                                        False\n",
+      "4      False                                        False\n",
+      "..       ...                                          ...\n",
+      "197    False                                        False\n",
+      "198    False                                         True\n",
+      "199    False                                        False\n",
+      "200    False                                        False\n",
+      "201    False                                        False\n",
+      "\n",
+      "[202 rows x 2 columns]\n",
+      "     Country  Net primary school enrolment ratio male (%)\n",
+      "0       True                                        False\n",
+      "1       True                                         True\n",
+      "2       True                                         True\n",
+      "3       True                                         True\n",
+      "4       True                                         True\n",
+      "..       ...                                          ...\n",
+      "197     True                                         True\n",
+      "198     True                                        False\n",
+      "199     True                                         True\n",
+      "200     True                                         True\n",
+      "201     True                                         True\n",
+      "\n",
+      "[202 rows x 2 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Net primary school enrolment ratio male (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>West Bank and Gaza</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>202 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Country  Net primary school enrolment ratio male (%)\n",
+       "0           Afghanistan                                          0.0\n",
+       "1               Albania                                         94.0\n",
+       "2               Algeria                                         96.0\n",
+       "3               Andorra                                         83.0\n",
+       "4                Angola                                         51.0\n",
+       "..                  ...                                          ...\n",
+       "197             Vietnam                                         96.0\n",
+       "198  West Bank and Gaza                                          0.0\n",
+       "199               Yemen                                         85.0\n",
+       "200              Zambia                                         90.0\n",
+       "201            Zimbabwe                                         87.0\n",
+       "\n",
+       "[202 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('WHO_first9cols.csv')\n",
+    "df.count()\n",
+    "df2 = df[['Country',df.columns[-2]]]\n",
+    "df2\n",
+    "\n",
+    "print(pd.isnull(df2))   # 결측치는 True로 반환\n",
+    "print(pd.notnull(df2))  # 결측치는 False로 반환\n",
+    "\n",
+    "pd.isnull(df2).sum()   # -2번 컬럼의 결측치 갯수: 23\n",
+    "pd.isnull(df).sum()   # 컬럼별 결측치의 갯수\n",
+    "\n",
+    "df3 = df2.fillna(0)\n",
+    "df3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
