--- a/02_머신러닝/01_머신러닝기초.ipynb
+++ b/02_머신러닝/01_머신러닝기초.ipynb
@@ -133,8 +133,18 @@
    "outputs": [],
    "source": [
     "# 경사 하강법 알고리즘 함수 구현, 미분 적용\n",
+    "# W : W - (학습율)* 미분값     ==> 가중치를 업데이트한다\n",
     "def gradient_descent(x,y,w):\n",
-    "    "
+    "    c = 0\n",
+    "    for i in range(len(x)):\n",
+    "        hx = w*x[i]\n",
+    "        loss = (hx - y[i])*x[i]  # 곱하기 2를 생략한 비용함수의 미분 공식\n",
+    "        c += loss\n",
+    "        # 비용함수의 미분 : cost(w) = (w*x[i] - y[i])^2 의 미분\n",
+    "        # (a + b)^2 = a^2 + 2*a*b + b^2\n",
+    "        # cost(w) = w^2 * x[i]^2 - 2 * w * x[i] * y[i] + y[i]^2\n",
+    "        # cost'(w) = 2*w*x[i]^2 - 2 * x[i] * y[i] = 2*x[i]*(w*x[i] - y[i]) ==> (hx - y[i])*x[i]\n",
+    "    return c/len(x)   "
    ]
   }
  ],
