--- a/02_머신러닝/01_머신러닝기초.ipynb
+++ b/02_머신러닝/01_머신러닝기초.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,10 +86,10 @@
     "def cost(x,y,w):     \n",
     "    c = 0\n",
     "    for k in range(len(x)):\n",
-    "        hx = w * x[k]        # 예측 함수\n",
+    "        hx = w * x[k]           # 예측 함수\n",
     "        loss = (hx - y[k])**2   # 비용함수 ,(예측값 - 실제값)^2\n",
     "        c += loss\n",
-    "    return c/len(x)          # 평균 제곱 오차   \n",
+    "    return c/len(x)             # 평균 제곱 오차   \n",
     "\n",
     "x = [1,2,3]   # 입력 값  ,         독립 변수\n",
     "y = [1,2,3]   # 실제값,답, target, 종속 변수\n",
@@ -128,12 +128,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------- start learning!!\n",
+      "[  0] cost: 378.0 old\n",
+      "[  1] cost: 107.51999999999998 old\n",
+      "[  2] cost: 30.583466666666666 old\n",
+      "[  3] cost: 8.69929718518518 old\n",
+      "[  4] cost: 2.47446675489712 old\n",
+      "[  5] cost: 0.7038483213929583 old\n",
+      "[  6] cost: 0.2002057447517751 old\n",
+      "[  7] cost: 0.05694741184050483 old\n",
+      "[  8] cost: 0.016198374923521403 old\n",
+      "[  9] cost: 0.004607537756023892 old\n",
+      "[ 10] cost: 0.0013105885172690224 old\n",
+      "[ 11] cost: 0.0003727896226898598 old\n",
+      "[ 12] cost: 0.0001060379371206724 old\n",
+      "[ 13] cost: 3.0161902114324568e-05 old\n",
+      "[ 14] cost: 8.579385490296031e-06 old\n",
+      "[ 15] cost: 2.4403585394623746e-06 old\n",
+      "[ 16] cost: 6.941464290019953e-07 old\n",
+      "[ 17] cost: 1.9744609536079287e-07 old\n",
+      "[ 18] cost: 5.616244490256599e-08 old\n",
+      "[ 19] cost: 1.597509543893363e-08 old\n",
+      "[ 20] cost: 4.544027147100321e-09 old\n",
+      "[ 21] cost: 1.292523277397425e-09 old\n",
+      "[ 22] cost: 3.6765106557353845e-10 old\n",
+      "[ 23] cost: 1.0457630309680019e-10 old\n",
+      "[ 24] cost: 2.974614843652282e-11 old\n",
+      "[ 25] cost: 8.461126664488492e-12 old\n",
+      "[ 26] cost: 2.4067204744183466e-12 old\n",
+      "[ 27] cost: 6.845782681618235e-13 old\n",
+      "[ 28] cost: 1.9472448527085553e-13 old\n",
+      "[ 29] cost: 5.538829787885448e-14 old\n",
+      "[ 30] cost: 1.575489361658054e-14 old\n",
+      "[ 31] cost: 4.481391952569267e-15 old\n",
+      "[ 32] cost: 1.2747070573345361e-15 old\n",
+      "[ 33] cost: 3.6258332831368247e-16 old\n",
+      "[ 34] cost: 1.0313481853667948e-16 old\n",
+      "[ 35] cost: 2.933612341505031e-17 old\n",
+      "[ 36] cost: 8.344497274162171e-18 old\n",
+      "[ 37] cost: 2.3735464825145457e-18 old\n",
+      "[ 38] cost: 6.751422044227725e-19 old\n",
+      "[ 39] cost: 1.920405593646558e-19 old\n",
+      "[ 40] cost: 5.462493428133877e-20 old\n",
+      "[ 41] cost: 1.5537773320496455e-20 old\n",
+      "[ 42] cost: 4.419657596231936e-21 old\n",
+      "[ 43] cost: 1.2571515848923574e-21 old\n",
+      "[ 44] cost: 3.5758710617043957e-22 old\n",
+      "[ 45] cost: 1.0171864166944069e-22 old\n",
+      "[ 46] cost: 2.8933990559698716e-23 old\n",
+      "[ 47] cost: 8.231253103671774e-24 old\n",
+      "[ 48] cost: 2.341362175139032e-24 old\n",
+      "[ 49] cost: 6.658942698258942e-25 old\n",
+      "[ 50] cost: 1.891893061517278e-25 old\n",
+      "[ 51] cost: 5.389865839559056e-26 old\n",
+      "[ 52] cost: 1.5315340044413334e-26 old\n",
+      "[ 53] cost: 4.38172789805011e-27 old\n",
+      "[ 54] cost: 1.2599423424554927e-27 old\n",
+      "[ 55] cost: 3.46129156767911e-28 old\n",
+      "[ 56] cost: 1.0355442841244991e-28 old\n",
+      "[ 57] cost: 2.677196697093809e-29 old\n",
+      "[ 58] cost: 8.283039504820624e-30 old\n",
+      "[ 59] cost: 1.791371638939381e-30 old\n",
+      "[ 60] cost: 9.203377227578472e-31 old\n",
+      "[ 61] cost: 3.4512664603419266e-31 old\n",
+      "[ 62] cost: 0.0 old\n",
+      "[ 63] cost: 0.0 old\n",
+      "--------- end learning!!\n",
+      "weight: 1.0 train: 63 회\n"
+     ]
+    }
+   ],
    "source": [
     "# 경사 하강법 알고리즘 함수 구현, 미분 적용\n",
-    "# W : W - (학습율)* 미분값     ==> 가중치를 업데이트한다\n",
+    "# W :  W - (학습률)* 미분값     ==> 가중치를 업데이트한다\n",
     "def gradient_descent(x,y,w):\n",
     "    c = 0\n",
     "    for i in range(len(x)):\n",
@@ -144,7 +218,101 @@
     "        # (a + b)^2 = a^2 + 2*a*b + b^2\n",
     "        # cost(w) = w^2 * x[i]^2 - 2 * w * x[i] * y[i] + y[i]^2\n",
     "        # cost'(w) = 2*w*x[i]^2 - 2 * x[i] * y[i] = 2*x[i]*(w*x[i] - y[i]) ==> (hx - y[i])*x[i]\n",
-    "    return c/len(x)   "
+    "    return c/len(x) \n",
+    "\n",
+    "# x = [1,2,3,4,5]\n",
+    "# y = [2.1,3.2,4.3,5.5,6.6]\n",
+    "\n",
+    "# 학습(train,fit) 시작\n",
+    "print('--------- start learning!!')\n",
+    "w,old = 10,100\n",
+    "for i in range(1000):\n",
+    "    c = cost(x,y,w)\n",
+    "    grad = gradient_descent(x,y,w)\n",
+    "    w -= 0.1*grad       # 0.1 :학습률(learning rate), 하이퍼 파라메터, 가중치의 업데이트 실행\n",
+    "    print('[%3d]'%i, 'cost:',c,'old')\n",
+    "#     if c == old :       # cost 가 더이상 줄지 않을 때\n",
+    "    if c >= old and abs(c - old)< 1.0e-15:   # cost가 1.0e-15 값 보다도 더 줄지 않을 때\n",
+    "        break\n",
+    "    old = c\n",
+    "    \n",
+    "print('--------- end learning!!')   \n",
+    "print('weight:',w,'train:',i,'회')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear Regression\n",
+    "# 알고리즘 구현 : 비용함수와 경사 하강법 알고리즘 함수 구현\n",
+    "# (1) 비용함수의 구현\n",
+    "def cost(x,y,w):     \n",
+    "    c = 0\n",
+    "    for k in range(len(x)):\n",
+    "        hx = w * x[k]           # 예측 함수\n",
+    "        loss = (hx - y[k])**2   # 비용함수 ,(예측값 - 실제값)^2\n",
+    "        c += loss\n",
+    "    return c/len(x)             # 평균 제곱 오차   \n",
+    "\n",
+    "# (2) 경사 하강법 알고리즘 함수 구현\n",
+    "def gradient_descent(x,y,w):\n",
+    "    c = 0\n",
+    "    for i in range(len(x)):\n",
+    "        hx = w*x[i]\n",
+    "        loss = (hx - y[i])*x[i]  # 곱하기 2를 생략한 비용함수의 미분 공식\n",
+    "        c += loss\n",
+    "        # 비용함수의 미분 : cost(w) = (w*x[i] - y[i])^2 의 미분\n",
+    "        # (a + b)^2 = a^2 + 2*a*b + b^2\n",
+    "        # cost(w) = w^2 * x[i]^2 - 2 * w * x[i] * y[i] + y[i]^2\n",
+    "        # cost'(w) = 2*w*x[i]^2 - 2 * x[i] * y[i] = 2*x[i]*(w*x[i] - y[i]) ==> (hx - y[i])*x[i]\n",
+    "    return c/len(x) \n",
+    "\n",
+    "# (3) 학습(fit) 함수 구현\n",
+    "def fit(x,y):\n",
+    "    print('--------- start learning!!')\n",
+    "    w,old = 10,100\n",
+    "    for i in range(1000):\n",
+    "        c = cost(x,y,w)\n",
+    "        grad = gradient_descent(x,y,w)\n",
+    "        w -= 0.1*grad       # 0.1 :학습률(learning rate), 하이퍼 파라메터, 가중치의 업데이트 실행\n",
+    "        print('[%3d]'%i, 'cost:',c,'old')\n",
+    "        if c >= old and abs(c - old)< 1.0e-15:   # cost가 1.0e-15 값 보다도 더 줄지 않을 때\n",
+    "            break\n",
+    "        old = c\n",
+    "    print('--------- end learning!!') \n",
+    "    return w\n",
+    "\n",
+    "# (4) 예측(predict) 함수 구현    \n",
+    "def predict(x,w):\n",
+    "    hx = w*np.array(x)\n",
+    "    return list(hx)\n",
+    "\n",
+    "# (5) 정확도(평가지표) 측정 함수 구현 : 정확도 검증(validation)\n",
+    "# <1> 분류(classification) 일때 : 정확도(%)\n",
+    "def get_accuarcy(w,x_test,y_test):\n",
+    "    y_predict = predict(w,x_test)\n",
+    "    print(y_predict)\n",
+    "    correct = 0\n",
+    "    for k,_ in enumerate(y_test):\n",
+    "        if y_test[k] == y_predict[k]:\n",
+    "            correct += 1\n",
+    "    accuracy = round(correct/len(y_test),2)\n",
+    "    return accuracy\n",
+    "\n",
+    "# <2> 회귀(Linear Regression) 일때 : RMSE(Root Mean Squared Error,평균 제곱근 오차)\n",
+    "def get_rmse(w,x_test,y_test):\n",
+    "    y_predict = predict(w,x_test)\n",
+    "    print(y_predict)\n",
+    "    squared_error = 0\n",
+    "    for k,_ in enumerate(y_test):\n",
+    "        squared_error += (y_predict[k] - y_test[k])**2\n",
+    "    mse = squared_error/len(y_test)    \n",
+    "    rmse = np.sqrt(mse)\n",
+    "    return rmse \n",
+    "    "
    ]
   }
  ],
