--- a/02_머신러닝/01_머신러닝기초.ipynb
+++ b/02_머신러닝/01_머신러닝기초.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
     "    return w\n",
     "\n",
     "# (4) 예측(predict) 함수 구현    \n",
-    "def predict(x,w):\n",
+    "def predict(w,x):\n",
     "    hx = w*np.array(x)\n",
     "    return list(hx)\n",
     "\n",
@@ -311,9 +311,15 @@
     "        squared_error += (y_predict[k] - y_test[k])**2\n",
     "    mse = squared_error/len(y_test)    \n",
     "    rmse = np.sqrt(mse)\n",
-    "    return rmse \n",
-    "    "
+    "    return rmse     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
