--- a/02_머신러닝/01_머신러닝기초.ipynb
+++ b/02_머신러닝/01_머신러닝기초.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +314,73 @@
     "    mse = squared_error/len(y_test)    \n",
     "    rmse = np.sqrt(mse)\n",
     "    return rmse     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------- start learning!!\n",
+      "[  0] cost: 704.0 old\n",
+      "[  1] cost: 7.040000000000012 old\n",
+      "[  2] cost: 0.07040000000000013 old\n",
+      "[  3] cost: 0.0007039999999999871 old\n",
+      "[  4] cost: 7.03999999999845e-06 old\n",
+      "[  5] cost: 7.040000000016923e-08 old\n",
+      "[  6] cost: 7.040000000546988e-10 old\n",
+      "[  7] cost: 7.040000000689097e-12 old\n",
+      "[  8] cost: 7.039999989746739e-14 old\n",
+      "[  9] cost: 7.039999978378055e-16 old\n",
+      "[ 10] cost: 7.040001164984472e-18 old\n",
+      "[ 11] cost: 7.040001164984472e-20 old\n",
+      "[ 12] cost: 7.039830636607046e-22 old\n",
+      "[ 13] cost: 7.040612264052197e-24 old\n",
+      "[ 14] cost: 7.028750665519215e-26 old\n",
+      "[ 15] cost: 6.888333424389875e-28 old\n",
+      "[ 16] cost: 7.257520328033308e-30 old\n",
+      "[ 17] cost: 0.0 old\n",
+      "[ 18] cost: 0.0 old\n",
+      "--------- end learning!!\n",
+      "weight: 2.0\n",
+      "y_predict: [12.0, 14.0, 16.0, 18.0, 20.0]\n",
+      "[20.0, 40.0, 60.0, 80.0, 100.0]\n",
+      "Accuracy: 0.8\n",
+      "[20.0, 40.0, 60.0, 80.0, 100.0]\n",
+      "RMSE: 0.4472135954999579\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 머신러닝 사용자가 구현 할 부분: 모델 구현\n",
+    "\n",
+    "# (1) fit() 함수 호출하여 학습 수행\n",
+    "x_train = [1,2,3,4,5]\n",
+    "y_train = [2,4,6,8,10]\n",
+    "w = fit(x_train,y_train)\n",
+    "print('weight:',w)               # 2.0\n",
+    "\n",
+    "# (2) predict() 함수 호출하여 예측\n",
+    "x_predict = [6,7,8,9,10]\n",
+    "y_predict = predict(w,x_predict)\n",
+    "print('y_predict:',y_predict)     # [12.0, 14.0, 16.0, 18.0, 20.0]\n",
+    "\n",
+    "# (3) 정확도 측정 함수 호출하여 평가\n",
+    "# 분류 모델인 경우\n",
+    "x_test = [10,20,30,40,50]\n",
+    "y_test = [20,40,60,80,99]\n",
+    "accuracy = get_accuarcy(w,x_test,y_test)\n",
+    "print('Accuracy:',accuracy)  # 0.8  --> 80%  , 절대 지표\n",
+    "\n",
+    "# 회귀 모델인 경우\n",
+    "x_test = [10,20,30,40,50]\n",
+    "y_test = [20,40,60,80,99]\n",
+    "rmse = get_rmse(w,x_test,y_test)\n",
+    "print('RMSE:',rmse)          # 0.4472135954999579  , 상대지표"
    ]
   },
   {
