--- a/02_머신러닝/03_앙상블_RandomForest_XGBoost_LightGBM.ipynb
+++ b/02_머신러닝/03_앙상블_RandomForest_XGBoost_LightGBM.ipynb
@@ -476,7 +476,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x1f66c3b3d00>"
+       "<graphviz.files.Source at 0x29899ee1940>"
       ]
      },
      "execution_count": 4,
@@ -1218,7 +1218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11:59:20] WARNING: C:\\Users\\Administrator\\workspace\\xgboost-win64_release_1.2.0\\src\\learner.cc:516: \n",
+      "[10:50:58] WARNING: C:\\Users\\Administrator\\workspace\\xgboost-win64_release_1.2.0\\src\\learner.cc:516: \n",
       "Parameters: { early_stoppings } might not be used.\n",
       "\n",
       "  This may not be accurate due to some parameters are only used in language bindings but\n",
@@ -1707,7 +1707,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f66fda61f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x298a08e72e0>"
       ]
      },
      "execution_count": 16,
@@ -2867,7 +2867,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f673f0d580>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x298a19e7880>"
       ]
      },
      "execution_count": 28,
