--- a/03_딥러닝_Tensorflow/06_logistic_regression.ipynb
+++ b/03_딥러닝_Tensorflow/06_logistic_regression.ipynb
@@ -422,14 +422,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n",
+      "Hypothesis:\n",
+      " [[1.8225627e-07]\n",
+      " [1.8111591e-03]\n",
+      " [1.8908737e-03]\n",
+      " [9.9750584e-01]\n",
+      " [9.9999464e-01]\n",
+      " [9.9999976e-01]]\n",
+      "Predict:\n",
+      " [[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 정확도 측정 : accuracy computation\n",
     "def predict(X):\n",
-    "    "
+    "    return tf.cast(hypothesis(X) > 0.5, dtype=tf.float32)\n",
+    "\n",
+    "# 학습 데이터를 그대로 검증 데이터로 사용하여 예측한 경우\n",
+    "x_test = x_train\n",
+    "y_test = y_train\n",
+    "\n",
+    "preds = predict(x_test)\n",
+    "accuracy = tf.reduce_mean(tf.cast(tf.equal(preds,y_test),dtype=tf.float32))\n",
+    "\n",
+    "print('Accuracy:',accuracy.numpy())\n",
+    "print('Hypothesis:\\n',hypothesis(x_test).numpy())\n",
+    "print('Predict:\\n',preds.numpy())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***** Predict\n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예측\n",
+    "print('***** Predict')\n",
+    "# x_data = [[1,2],\n",
+    "#           [2,3],\n",
+    "#           [3,1],\n",
+    "#           [4,3],\n",
+    "#           [5,3],\n",
+    "#           [6,2]]\n",
+    "x_data = [[1,1],\n",
+    "          [2,5],\n",
+    "          [3,3],\n",
+    "          [4,4],\n",
+    "          [5,2],\n",
+    "          [6,6]]\n",
+    "x_test = np.array(x_data,dtype=np.float32)\n",
+    "preds = predict(x_test)\n",
+    "print(preds.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
