--- a/03_딥러닝_Tensorflow/09_softmax_multi_classification_zoo.ipynb
+++ b/03_딥러닝_Tensorflow/09_softmax_multi_classification_zoo.ipynb
@@ -1989,6 +1989,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.9999928e-01 1.4007495e-10 2.4182706e-14 5.4935279e-15 7.3677319e-07\n",
+      " 1.9121543e-08 1.0144769e-15]\n",
+      "[1. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hypothesis(x_test).numpy()[0])\n",
+    "print(Y_one_hot.numpy()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
